--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+   
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],   
+    "jsx": "react-jsx",                                
+    "moduleResolution": "node",  
+    "resolveJsonModule": true, 
+    "allowJs": true,    
+    "noEmit": true,   
+    "isolatedModules": true,  
     "allowSyntheticDefaultImports": true,
-    "skipDefaultLibCheck": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "strict": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "esModuleInterop": true, 
+    "forceConsistentCasingInFileNames": true, 
+    "strict": true,       
+    "skipLibCheck": true  
   },
-  "include": ["src"]
+  "include" : ["src"]
 }
